--- a/very cool.html
+++ b/very cool.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to the HTML document!</h1>
+    <div><button onclick class="hi"<hi></div>
 </body>
 </html>
